--- a/basic3.html
+++ b/basic3.html
@@ -13,7 +13,7 @@
         }
     body
        {
-        background-image:url('static/images/cdimage.jpg');
+        background-image:url('static/images/pandaimages.jpg');
         background-size: 50%;;
         background-repeat: no-repeat;
        background-position: center;
