--- a/form1.html
+++ b/form1.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Form in Html</title>
+    <link rel="stylesheet" href="static/css/External_cssEx.css">
 </head>
 <body>
     <form method = "post" enctype="multipart/form-data">
