--- a/Layout_ex_1.html
+++ b/Layout_ex_1.html
@@ -9,7 +9,7 @@
             margin: 0;
             padding: 0;
             box-sizing: border-box;
-            list-style: none;
+             list-style: none; 
         }
         html{
             color-scheme: light dark;
@@ -18,8 +18,8 @@
             line-height: 1.5;
         }
         header{
-            background-color: red;
-            padding: .5rem;
+            /* background-color: red; */
+            padding: .1rem;
         }
         nav{
             /* background-color:#ffffff74 ; */
@@ -29,7 +29,7 @@
             gap: 1rem;
         }
         .nav-list a{
-            color: beige;
+            color: rgb(243, 55, 13);
             text-decoration: none;
             font-size: 1.3rem;
         }
@@ -38,16 +38,44 @@
         }
         main{
             min-height: 80vh;
-             background-color: orange 
+             /* background-color: orange ; */
+             width : min(70ch ,90%);
+             margin-inline: auto;
         }
+        
         .Hero-Heading{
             font-size: 2.5rem;          
             color:green ;
             line-height: 1.2;
             margin-bottom: 5rem;
-            margin-left: 1rem;
+            /* margin-left: 1rem; */
             padding-top: 5rem;
         }
+      .text{
+    font-size: 1.25rem;
+    text-align: justify;
+    margin-bottom: 1rem;
+    }
+    .item-list >* {
+   list-style-image: url('static/images/arrow.png');
+   /* padding-left: 1rem; */
+    margin-left: 1.3rem; 
+    padding: .2rem;
+    font-size: 1.5rem;
+    font-weight: bold;
+    }
+    .item-list
+    {
+        margin-bottom: 1rem;
+    }
+    footer{
+        background-color: black;
+        display: flex;
+        padding: 1rem;
+        justify-content: center;
+        color: rgb(243, 55, 13);
+        font-weight: bold;
+    }
     </style>
 </head>
 
@@ -65,16 +93,16 @@
         <section>
             <article>
                 <h2 class="Hero-Heading">Welcome to my css Layouts</h2>
-                <p>
-                    Today we are going to see examples of layouts in css
+                <p class="text">
+                   Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni tenetur adipisci at corporis ab illo, eligendi reprehenderit minus esse? Dolorum a voluptates qui doloribus sit earum quas fuga, enim incidunt minima est, sequi, perferendis eius maxime quos cupiditate vero deserunt reprehenderit aut quae necessitatibus tempore excepturi facere eos! Exercitationem, voluptatem.
                 </p>
-                <ul>
+                <ul class="item-list">
                     <li>Grids</li>
                     <li>Flexbox</li>
                     <li>Mixing both togther</li>
                 </ul>
-                <p>
-                    This is very useful for creating simple layouts
+                <p class="text">
+                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore quod explicabo necessitatibus sunt esse corporis delectus. Voluptatibus magni quam tempora, alias sunt commodi. Voluptatem labore, illum a, natus porro deserunt fugiat accusantium neque iste dolorem dolore, error atque expedita ab molestiae voluptate et officia vel iure reiciendis nostrum hic animi!
                 </p>
             </article>
         </section>
