--- a/Layout_ex_1.html
+++ b/Layout_ex_1.html
@@ -38,7 +38,7 @@
         }
         main{
             min-height: 80vh;
-             /* background-color: orange ; */
+              background-color: orange ; 
              width : min(70ch ,90%);
              margin-inline: auto;
         }
