--- a/layout2.html
+++ b/layout2.html
@@ -55,7 +55,59 @@
         }
         .col h1{
             font-size: 6rem;
+            margin-top: 7rem;
         }
+        .hero img{
+            width: 400px;
+            height: 400px;
+            object-fit: cover;
+            border-radius: 5rem; 
+             margin-top: 5rem;       }
+            .col button{           
+                margin-top: 5rem;
+                font-size: 2rem;
+                color:black;
+              background-color: rgb(128, 0, 98);
+              object-fit: cover;
+              border-radius: 2rem;
+            }
+            .h2{
+                display: flex;
+                direction: column;
+                justify-content: center;
+                text-align: center;
+                padding-top: 5rem;
+                gap: .5rem;
+                font-size: 4rem;
+                font-family:sans-serif ;
+            }
+            .span{
+                color: purple;  
+                font-size: 4rem; 
+                /* display: flex;    */
+                font-family:sans-serif ;        
+            }
+            .para{
+                display: flex;
+                direction: column;
+                justify-content: center;
+                text-align: center;
+                padding-top: 5rem;
+                font-family:sans-serif ;
+             
+            }
+           .sec{
+                display: grid;
+              grid-template-columns: 1fr 1fr;
+            gap: 2rem;
+            align-items: center;
+
+            }
+            .heading{
+                color:purple;
+                font-size: 5rem;
+                font-family: sans-serif;
+            }
     </style>
 </head>
 <body>
@@ -73,8 +125,18 @@
             </div>
             <div class=" col hero"> <a href="#"><img src="static/images/1.png" alt="images1"></a></div></div>
         </section>
-        <section></section>
-        <section></section>
+        <section>
+            <h2 class="h2">
+           <span class="span">kinnectic </span>  is a startup looking to change the way people connect </h2>
+            <p class="para">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae tempora fuga alias unde saepe sit itaque quis doloremque? In dolorum, culpa maxime quisquam enim quos?  Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae tempora fuga alias unde saepe sit itaque quis doloremque? In dolorum, culpa maxime quisquam enim quos? Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae tempora fuga alias unde saepe sit itaque quis doloremque? In dolorum, culpa maxime quisquam enim quos?  Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae tempora fuga alias unde saepe sit itaque quis doloremque? In dolorum, culpa maxime quisquam enim quos</p>   
+             </section>
+        <section ><div class="sec">
+            <h2 class="heading">connect with friends</h2>
+            <p>Use kinnectric to connect with people you know.</p>
+            <p>Kinnectrics can also connect you to people outside your usual circle</p>
+            <a href="#"><img src="static/images/2.png" alt="images2"></a></div>
+        </section>
         <section></section>
         <section></section>
         <section></section>
