--- a/layout2.html
+++ b/layout2.html
@@ -32,6 +32,7 @@
              display: flex;
              align-items: center;
              gap: 1rem;
+            
          }
         .logo{
             width: 2.5rem;
@@ -72,9 +73,9 @@
               border-radius: 2rem;
             }
             .h2{
-                display: flex;
-                direction: column;
-                justify-content: center;
+                /* display: flex; */
+                /* direction: column; */
+                /* justify-content: center; */
                 text-align: center;
                 padding-top: 5rem;
                 gap: .5rem;
